--- a/RL Tutorial.ipynb
+++ b/RL Tutorial.ipynb
@@ -30362,7 +30362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30373,7 +30373,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([1, 2, 3, 4]), tensor([1, 2, 3, 4]), tensor([1, 2, 3, 4]), tensor([1, 2, 3, 4]))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = []\n",
+    "for i in range(32):\n",
+    "    t.append(Transition(torch.tensor([1, 2, 3, 4]), 2, 3, 4))\n",
+    "\n",
+    "t = random.sample(t, 4)\n",
+    "t = Transition(*zip(*t))\n",
+    "print(t.state)\n",
+    "state = torch.cat(t.state)\n",
+    "state.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "每次和环境交互产生的一次Transition，都放到经验回放池中，用于批次化的训练，增加训练过程的稳定性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30400,21 +30442,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Q function base network\n",
     "class DQN(nn.Module):\n",
     "    def __init__(self, n_states, n_actions):\n",
-    "        super(DQN, self).__init_()\n",
+    "        super(DQN, self).__init__()\n",
     "        self.fc1 = nn.Linear(n_states, 128)\n",
     "        self.fc2 = nn.Linear(128, 128)\n",
     "        self.fc3 = nn.Linear(128, n_actions)\n",
     "\n",
     "    def forward(self, x):\n",
     "        # x.shape: batch_size * n_states\n",
-    "        return self.fc3(F.relu(self.fc3(F.relu(self.fc1(x)))))"
+    "        layer1 = self.fc1(x)\n",
+    "        layer1 = F.relu(layer1)\n",
+    "        layer2 = self.fc2(layer1)\n",
+    "        layer2 = F.relu(layer2)\n",
+    "        layer3 = self.fc3(layer2)\n",
+    "        return layer3"
    ]
   },
   {
@@ -30428,7 +30475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30460,7 +30507,7 @@
     "        # r_{t + 1}.shape: batch_size * 1\n",
     "        reward_batch = torch.cat(batch.reward)\n",
     "        # < batch_size\n",
-    "        non_final_next_state_batch = torch.cat([s for s in batch.next_state if  s is not None])\n",
+    "        non_final_next_state_batch = torch.cat([s for s in batch.next_state if s is not None])\n",
     "\n",
     "        # 构造模型训练用的输入和输出\n",
     "        # s_t: input\n",
@@ -30504,7 +30551,88 @@
     "            with torch.no_grad():\n",
     "                action = self.model(state).max(1)[1].view(1, 1)\n",
     "\n",
-    "        return action"
+    "        return action\n",
+    "    \n",
+    "    def memorize(self, state, action, next_state, reward):\n",
+    "        self.memory.push(state, action, next_state, reward)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agent 与 env 进行交互"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.26.2'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gym\n",
+    "gym.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env = gym.make('CartPole-v1', render_mode=\"rgb_array\")\n",
+    "n_states = env.observation_space.shape[0]\n",
+    "n_actions = env.action_space.n\n",
+    "\n",
+    "max_episode = 500\n",
+    "max_steps = 200\n",
+    "complete_episode = 0\n",
+    "\n",
+    "agent = Agent(n_states, n_actions)\n",
+    "\n",
+    "for episode in range(max_episode):\n",
+    "    state = env.reset()\n",
+    "    state = torch.from_numpy(state[0]).type(torch.FloatTensor).unsqueeze(0)\n",
+    "    for step in range(max_steps):\n",
+    "        # IntTensor of 1 * 1\n",
+    "        action = agent.choose_action(state, episode)\n",
+    "\n",
+    "        # transition on env\n",
+    "        next_state, _, done, _, _ = env.step(action.item())\n",
+    "\n",
+    "        if done:\n",
+    "            next_state = None\n",
+    "            if step < 195:\n",
+    "                reward = torch.FloatTensor([-1, 1])\n",
+    "                complete_episode = 0\n",
+    "            else:\n",
+    "                reward = torch.FloatTensor([1.])\n",
+    "                complete_episode += 1\n",
+    "        else:\n",
+    "            reward = torch.FloatTensor([0])\n",
+    "            next_state = torch.from_numpy(next_state).type(torch.FloatTensor)\n",
+    "            next_state = next_state.unsqueeze(0)\n",
+    "        agent.memorize(state, action, next_state, reward)\n",
+    "        state = next_state\n",
+    "\n",
+    "        if done:\n",
+    "            print(f'episode: {episode}, steps: {step}')\n",
+    "            break\n",
+    "\n",
+    "    if complete_episode >= 10:\n",
+    "        print('连续成功10轮')\n",
+    "        break\n"
    ]
   }
  ],
