feat✨: Policy gradient network

--- a/RL Tutorial.ipynb
+++ b/RL Tutorial.ipynb
@@ -30634,6 +30634,48 @@
     "        print('连续成功10轮')\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deep policy gradient on cartpole\n",
+    "\n",
+    "#### Summary\n",
+    "\n",
+    "* Q Learning => DQN\n",
+    "  * deep networks 去逼近 Q function (action value)，回归问题\n",
+    "  * 输出的不是概率，而是 action value\n",
+    "* Policy Gradient => Deep Policy Gradient\n",
+    "  * deep networks 去逼近$\\pi_{\\theta}(a_t|s_t)$\n",
+    "  * 输出的是概率分布，所以最后一层要加 softmax 做概率化\n",
+    "  * 算法：[REINFORCE](http://www.cs.toronto.edu/~tingwuwang/REINFORCE.pdf)\n",
+    "\n",
+    "#### Policy Network\n",
+    "\n",
+    "##### REINFORCE\n",
+    "\n",
+    "* * *\n",
+    "\n",
+    "`function REINFORCE`<br>\n",
+    "    $\\qquad$ Initialize $\\theta$ arbitrarily<br>\n",
+    "    $\\qquad$`for` each episode ${ s_1, a_1, r_2, \\cdots, s_{T - 1}, a_{T - 1}, r_t } \\sim \\pi_{\\theta}$ `do`<br>\n",
+    "        $\\qquad\\qquad$ `for` $t = 1$ to $T - 1$ `do`<br>\n",
+    "            $\\qquad\\qquad\\qquad \\theta \\leftarrow \\theta + \\alpha \\nabla_{\\theta} \\mathbf{log} \\pi_{\\theta}(s_t, a_t)v_t$<br>\n",
+    "        $\\qquad\\qquad$`end for`<br>\n",
+    "    $\\qquad$`end for`<br>\n",
+    "    $\\qquad$`return` $\\theta$<br>\n",
+    "`end function`\n",
+    "* * *\n",
+    "\n",
+    "##### Calculate the future total discount returned reward $v_t$ or $G_t$\n",
+    "\n",
+    "* * *\n",
+    "\n",
+    "* * *\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
